RESOLVED FIXED 254632
Exiting fullscreen on ign.com fails to restore scroll position
https://bugs.webkit.org/show_bug.cgi?id=254632
Summary Exiting fullscreen on ign.com fails to restore scroll position
Tim Nguyen (:ntim)
Reported 2023-03-28 17:09:44 PDT
Attachments
Tim Nguyen (:ntim)
Comment 1 2023-03-28 17:19:06 PDT
EWS
Comment 2 2023-03-29 11:11:41 PDT
Committed 262281@main (b8bf24826066): <https://commits.webkit.org/262281@main> Reviewed commits have been landed. Closing PR #12088 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.