Cherry-pick 262281@main (b8bf24826066). https://bugs.webkit.org/show_bug.cgi?id=254632

Exiting fullscreen on ign.com fails to restore scroll position
    https://bugs.webkit.org/show_bug.cgi?id=254632
    rdar://106774841

    Reviewed by Jer Noble.

    The bug is caused by a missing layout in some particular situations (overflow: auto + percentage sizes) before restoring the scroll position.
    Adding a call to forceLayout() fixes the issue.

    However, in order for the test to work in WebKit Test runner, the save/restoreScrollPosition methods also need to be called in the InjectedBundle.
    Safari & minibrowser use a different codepath (involving the UIProcess).

    * LayoutTests/fullscreen/fullscreen-restore-scroll-position-overflow-auto-expected.txt: Added.
    * LayoutTests/fullscreen/fullscreen-restore-scroll-position-overflow-auto.html: Added.
    * LayoutTests/platform/mac-wk1/TestExpectations:
    * Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
    (WebKit::WebFullScreenManager::restoreScrollPosition):
    * Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.h:
    * Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
    (WKBundlePageWillEnterFullScreen):
    (WKBundlePageDidExitFullScreen):

    Canonical link: https://commits.webkit.org/262281@main